--- a/img/JS Game.html
+++ b/img/JS Game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0032)http://127.0.0.1:5500/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>JS Game</title>
