--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,9 +16,8 @@
 <body>
     <div class="container">
         <div class="container__conteudo">
-            <img src="./img/robot.png" alt="robô mergulhador" class="container__imagem-robo" />
             <div class="container__informacoes">
-                <img src="./img/trophy.png" alt="ícone de um troféu" />
+                <img src="img/leon.png" alt="ícone de um troféu" />
                  <div class="container__texto">
                     <h1>Você <span class="container__texto-azul">acertou!</span></h1>
                     <h2>Você descobriu o número secreto!</h2>
